# genai-monitoring

./: .env.example  main.py  pyproject.toml
app/core/: config.py  exceptions.py  loggers.py
